  o Node and edge labels can now be assigned using a list.
  o Fixed a bug where tooltips could not be plotted with filetype='svg'. Tooltips now no longer require labels as well.
  o Using the filetype argument in combination with a legend (or filetype='svg') will now once again create a larger plotting window such that the graph is plotted in a square window.

Changes in Version 1.2.1
  o Curved edges can now be displayed as mostly straigth edges what run parallel. This can be done using the new argument 'curvePivot'. See documentation of 'qgraph' for more information.
  o Shape of curved edges can now be controlled with 'curveShape' and 'curvePivotShape'.
  o The start of edges is now also reset to the edge of nodes if the destination of the edge is also reset. This will cause that bidirectional edges now look the same as directed edges.
  o Fixed a bug where graphs with a single edge were unable to plot edge labels.
  o jpeg package is now used to read jpeg files.


Changes in Version 1.2
  o NEW MAJOR FEATURES:
    o Support added to include R plots as nodes. This can be done with the 'subplots' argument, which takes a list of R expressions that create a plot when evaluated. The 'subplot' function in the R package Hmisc is used to create the subplots.
    o Added the 'images' argument which can be used to plot png and jpeg files as node images.
    o Added knots, knot.size, knot.color, knot.borders, knot.border.color and knot.border.width arguments that allow tying edges together at their center.
	o igraph support added:
	  o the as.igraph function converts a qgraph object to an igraph object	
	  o igraph layout functions can now be assigned to the layout argument in qgraph(). The layout.par functon can be used to specify arguments to the function.
	o Edge color specification
	  o Added argument for controlling default positive edge color: posCol
      o Added argument for controlling default negative edge color: negCol